--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 
 				<div class="col-md-2">
 					<h4>SITE MAP</h4>
-					<p><i class="fa fa-fw fa-home" aria-hidden="true"></i> &nbsp;<a href="index.html">Home</a></p>
-					<p><i class="fa fa-fw fa-file-text" aria-hidden="true"></i> &nbsp;<a href="portfolio/index.html">Portfolio</a></p>
+					<p><i class="fa fa-fw fa-home" aria-hidden="true"></i> &nbsp;<a href="https://edyta-bialek.github.io/index.html">Home</a></p>
+					<p><i class="fa fa-fw fa-file-text" aria-hidden="true"></i> &nbsp;<a href="https://edyta-bialek.github.io/portfolio/index.html">Portfolio</a></p>
 					<p><i class="fa fa-fw fa-check-square" aria-hidden="true"></i> &nbsp;<a href="https://edyta-bialek.github.io/privacy.html">Privacy</a></p>
 
 				</div><!-- /column -->
@@ -233,24 +233,6 @@
 		</div><!-- /container container-footer -->
 	
 	</div> <!-- /bg-footer -->
-	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
-	<script>
-	window.addEventListener("load", function(){
-	window.cookieconsent.initialise({
-	  "palette": {
-		"popup": {
-		  "background": "#000"
-		},
-		"button": {
-		  "background": "#f1d600"
-		}
-	  },
-	  "content": {
-		"href": "../privacy.html"
-	  }
-	})});
-	</script>
 
 
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css">
