--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<h3>Everybody likes own tea</h3>
-					<p>Around the worlds people are drinking tea in own way.</p>
+					<p>Around the world people are drinking tea in own way.</p>
 					<p>Masala is a tea popular in India with a mixture of spices and herbs, with milk in UK, Cay tea with sugar in Turkey, Tibetan Butter Tea (Po Cha), Mint tea in Marocco, with condense milk in Hong Kong, Bubble tea from Taiwan, Cha yen (milk tea with ice) in Tailand, black tea with cardamom and saffron in Kuwait.</p>
 				</div>
 				<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/girl.jpg" alt="add account" class="img-fluid"></div>
