--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/mystyle.css">
-	<link rel="stylesheet" href="js/scroll.function.js">
+	
 
  </head>
 
@@ -43,12 +43,12 @@
 			<span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link" href="index.html"></i>  &nbsp;Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#types"></i> &nbsp;Types</a></li>
-					<li class="nav-item"><a class="nav-link" href="#history""></i>&nbsp;History</a></li>
-					<li class="nav-item"><a class="nav-link" href="#curiosities"></i> &nbsp;Curiosities</a></li>
+					<li class="nav-item"><a class="nav-link" href="index.html">  &nbsp;Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="#types"> &nbsp;Types</a></li>
+					<li class="nav-item"><a class="nav-link" href="#history"> &nbsp;History</a></li>
+					<li class="nav-item"><a class="nav-link" href="#curiosities"> &nbsp;Curiosities</a></li>
 				</ul>
-				<a class="btn btn-get-in-touch" href="http://www.sheungyutea.com/"></i><i class="fa fa-shopping-cart" aria-hidden="true"></i> &nbsp;Recommened shop</a>
+				<a class="btn btn-get-in-touch" href="http://www.sheungyutea.com/"><i class="fa fa-shopping-cart" aria-hidden="true"></i> &nbsp;Recommened shop</a>
 			</div>
 		</div>
 	</nav>
