--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>Green</h3>
 				<IMG SRC="img/5.jpg" class="img-fluid images-shadow"  alt="portfolio powerpoint">
-				<p>Type of tea that is made from leaves that have not undergone the same withering and oxidation process used to make oolong teas and black teas. High-quality green and white teas can have new water added as many as five or more times, depending on variety, at increasingly higher temperatures.</a> 
+				<p>Type of tea that is made from leaves that have not undergone the same withering and oxidation process used to make oolong teas and black teas. High-quality green and white teas can have new water added as many as five or more times, depending on variety, at increasingly higher temperatures.</p> 
 			</div>
 		</div>
 	</div>
