--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 	<nav class="navbar navbar-expand-md fixed-top opaque-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html"><img src="img/leaf2.png" alt="website logo"></a>
+			<a class="navbar-brand" href="index.html"><img src="img/leaf2.png" alt="women in tea plantation"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span></button>
+			<span class="navbar-toggler-icon"> <i class="fa fa-navicon"> </i> </span></button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a class="nav-link" href="index.html">  &nbsp;Home</a></li>
@@ -48,7 +48,7 @@
 					<li class="nav-item"><a class="nav-link" href="#history"> &nbsp;History</a></li>
 					<li class="nav-item"><a class="nav-link" href="#curiosities"> &nbsp;Curiosities</a></li>
 				</ul>
-				<a class="btn btn-get-in-touch" href="http://www.sheungyutea.com/"><i class="fa fa-shopping-cart" aria-hidden="true"></i> &nbsp;Recommened shop</a>
+				<a class="btn btn-shop" href="http://www.sheungyutea.com/"><i class="fa fa-shopping-cart" aria-hidden="true"></i> &nbsp;Recommened shop</a>
 			</div>
 		</div>
 	</nav>
@@ -66,40 +66,49 @@
 		<hr class="color-center-line">
 	</div>
 
+
+
+ <!--section with 3 photos-->
+
+<div class="container">
 	<div class="types">
 		<div class="row">				
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>White</h3>
-				<IMG SRC="img/6.jpg" class="img-fluid images-shadow" alt="White">
+				<IMG SRC="img/6.jpg" class="img-fluid images-shadow" alt="white tea">
 				<p>Some sources use the term to refer to tea that is merely dried with no additional processing, some to tea made from the buds and immature tea leaves allowed to wither and dry in natural sun. Most definitions agree, however, that white tea is not rolled or oxidized, resulting in a flavour characterized as "lighter" than most green or traditional black teas. </p>
 			</div>
 
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>Yellow</h3>
-				<IMG SRC="img/7.jpg"  class="img-fluid images-shadow"  alt="portfolio smooth smoothies">
+				<IMG SRC="img/7.jpg"  class="img-fluid images-shadow"  alt="yellow tea">
 				<p>Unwilted and unoxidized but allowed to yellow;
 				Yellow tea is often placed in the same category with green tea due to its light oxidation. One of the primary aims of making yellow tea is to remove the characteristic grassy smell of green tea while preserving the associated health qualities of green tea. </p>
 			</div>
 
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>Green</h3>
-				<IMG SRC="img/5.jpg" class="img-fluid images-shadow"  alt="portfolio powerpoint">
+				<IMG SRC="img/5.jpg" class="img-fluid images-shadow"  alt="green tea">
 				<p>Type of tea that is made from leaves that have not undergone the same withering and oxidation process used to make oolong teas and black teas. High-quality green and white teas can have new water added as many as five or more times, depending on variety, at increasingly higher temperatures.</p> 
 			</div>
 		</div>
 	</div>
+</div>
 
+
+
+<div class="container">
 	<div class="types">
 		<div class="row">
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>Oolong</h3>
-				<IMG SRC="img/2.jpg" class="img-fluid images-shadow"   alt="portfolio fintech website">
+				<IMG SRC="img/2.jpg" class="img-fluid images-shadow"   alt="oolong tea">
 				<p> Oolong tea is a traditional semi-oxidized Chinese tea produced through a process including withering the plant under strong sun and oxidation before curling and twisting. Most oolong teas, especially those of fine quality, involve unique tea plant cultivars that are exclusively used for particular varieties. Unlike green tea, seeming to improve with reuse. </p>
 			</div>
 
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>Black</h3>
-				<IMG SRC="img/1.jpg" class="img-fluid images-shadow" alt="portfolio tutorials">
+				<IMG SRC="img/1.jpg" class="img-fluid images-shadow" alt="black tea">
 				<p>Wilted, sometimes crushed, and fully oxidized (called "red tea" in Chinese tea culture);
 					Popular varieties of black tea include Assam, Nepal, Darjeeling, Nilgiri, Rize, Keemun, and Ceylon teas.
 					Black tea is generally stronger in flavour than the less oxidized teas. All four types are made from leaves of the shrub (or small tree) Camellia sinensis.</p>
@@ -107,15 +116,20 @@
 
 			<div class="col-md-4 padding-top-bottom narrow-col">
 				<h3>Pu'er</h3>
-				<IMG SRC="img/4.jpg" class="img-fluid images-shadow"   alt="portfolio project">
+				<IMG SRC="img/4.jpg" class="img-fluid images-shadow"   alt="pu'er tea">
 				<p>Pu-erh green or red Pu-erh tea is a variety of fermented tea produced in Yunnan province, China. The town of Pu'er is named after the tea that is produced close by. Fermentation in the context of tea production involves microbial fermentation and oxidation of the tea leaves, after they have been dried and rolled. This process is a Chinese specialty and produces tea known as heichá (black or dark tea).</p>
 				
 			</div>
 		</div>
 	</div>
+</div>
+
+
+
+<div class="container">
 
 	<div class="bg-highlight-light">
-		<div class="container container-get-in-touch" id="history">
+		<div class="container container-text" id="history">
 			<p class="history1"><b>The History of Tea</b></p>
 
 			<p class="history">Tea drinking in China has its earliest references in connection to the mythical emperor Shennong, who is regarded as the father of Chinese medicine and agriculture. Shennnong is said to have tasted hundreds of wild herbs, including tea leaves, to ascertain their medicinal value. According to this legend, the discovery of tea dates back to around 2700 B.C., the era in which Shennong is said to have lived.
@@ -123,6 +137,11 @@
 			During the Tang dynasty (around 760), writer Lu Yu wrote Cha Jing (The Classic of Tea), an early work on the subject. The book's opening passage is about tea's origins in the south, showing that this has been a long-held theory.</p>
 		</div>
 	</div>
+	</div>
+
+
+
+
 
 <div class="container container-section-heading" id="curiosities">
 		<p>Tea is the most popular drink in the world right after water, but each one is different!</p>
@@ -130,11 +149,13 @@
 	</div>
 	
 
-	
 
+ <!--section with photo and text-->
+	
+<div class="container">
 <div class="two">
 		<div class="row">
-			<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/tea.jpg" alt="add account" class="img-fluid"></div>
+			<div class="col-md-6"><img src="img/tea.jpg" alt="tea variety" class="img-fluid images-shadow"></div>
 				<div class="col-md-6">
 					<h3>Huge variety</h3>
 					<p>You can find more than 1,500 types of tea in the world. All of them are covered under for main categories: green tea / black tea / white tea / oolong.</p>
@@ -144,6 +165,11 @@
 		</div>
 	</div>
 
+</div>
+
+
+<div class="container">
+
 	<div class="two">
 		<div class="row">
 				<div class="col-md-6">
@@ -151,14 +177,19 @@
 					<p>Around the world people are drinking tea in own way.</p>
 					<p>Masala is a tea popular in India with a mixture of spices and herbs, with milk in UK, Cay tea with sugar in Turkey, Tibetan Butter Tea (Po Cha), Mint tea in Marocco, with condense milk in Hong Kong, Bubble tea from Taiwan, Cha yen (milk tea with ice) in Tailand, black tea with cardamom and saffron in Kuwait.</p>
 				</div>
-				<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/girl.jpg" alt="add account" class="img-fluid"></div>
+				<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/girl.jpg" alt="girl drinking tea" class="img-fluid images-shadow"></div>
 			
 		</div>
 	</div>
+</div>
 
+
+
+
+<div class="container">
 	<div class="two">
 		<div class="row">
-			<div class="col-md-6 padding-top-bottom narrow-col "><img src="img/india.jpg" alt="add account" class="img-fluid"></div>
+			<div class="col-md-6 padding-top-bottom narrow-col "><img src="img/india.jpg" alt="tea collection" class="img-fluid images-shadow"></div>
 				<div class="col-md-6">
 					<h3>Large-scale production</h3>
 					<p>During the 17th century, drinking tea became fashionable among Britons, who started large-scale production and commercialization of the plant in India. </p>
@@ -167,8 +198,10 @@
 			
 		</div>
 	</div>
+</div>
 
 
+<div class="container">
 	<div class="two">
 		<div class="row">
 				<div class="col-md-6">
@@ -176,18 +209,17 @@
 					<p>In Eastern European countries (Russia, Poland and Hungary) and in Italy, tea is commonly served with lemon juice.</p>
 					<p> In Poland, tea with milk is called a bawarka ("Bavarian style"), and is often drunk by pregnant and nursing women. In Australia, tea with milk is white tea.</p>
 				</div>
-				<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/lemon.jpg" alt="add account" class="img-fluid"></div>
+				<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/lemon.jpg" alt="tea with lemon" class="img-fluid images-shadow"></div>
 			
 		</div>
 	</div>
+</div>
 
 
-
-
-
+<div class="container">
 	<div class="two">
 		<div class="row">
-			<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/samovar.jpg" alt="add account" class="img-fluid"></div>
+			<div class="col-md-6 padding-top-bottom narrow-col"><img src="img/samovar.jpg" alt="samovar" class="img-fluid images-shadow"></div>
 				<div class="col-md-6 ">
 					<h3>Is the glass enough? Tea Equipment</h3>
 					<p>In many regions of the world, however, actively boiling water is used and the tea is often stewed.</p>
@@ -197,6 +229,7 @@
 			
 		</div>
 	</div>
+</div>
 
 	
 
