--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 	})});
 	</script>
 
-
+<script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/smooth-scroll.min.js"></script>
